--- a/palmtreedesigns/Womenclothing.html
+++ b/palmtreedesigns/Womenclothing.html
@@ -42,24 +42,6 @@
   <link href="css/mystyles.css" rel="stylesheet">
   <link href="css/stylewomen.css" rel="stylesheet">
 
-
-   <!-- Scripts
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-   <script src="https://kit.fontawesome.com/4029df1ee2.js"></script>
-   <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-   <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text"></script>
-   <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
--->
-
-
 </head>
 
 <body>
@@ -67,7 +49,7 @@
        <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"> <img src="imgs/brandlogo.png" class="brandimage"></a>
+      <a class="navbar-brand" href="index.html"> <img src="imgs/brandlogo.png" class="brandimage"></a>
       <a class="shopcart d-block d-lg-none ml-auto mr-3" href="#"><i class="fas fa-shopping-bag fa-2x"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -75,7 +57,7 @@
       <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="Home.html">Home
+            <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
                 </a>
           </li>
@@ -252,8 +234,8 @@
                   <div class="socialbuttons">
                       <a href="https://www.facebook.com/PalmtreeDesigns-Embroidery-530402374060800" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
                       <a href="https://www.instagram.com/palmtree_designs/?hl=nl" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                      <a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                      <a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+                      <a href="https://www.linkedin.com/in/lenkenslisa/"  target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                      <a href="https://github.com/lisalenkens" target="_blank"><i class="fab fa-github fa-2x"></i></a>
                     </div>
 
                       <p class="copyright"> &copy; 2019. PalmTreeDesigns </p>
