--- a/palmtreedesigns/Womenclothing.html
+++ b/palmtreedesigns/Womenclothing.html
@@ -73,10 +73,10 @@
                 </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="index.html">Contact</a>
           </li>
         </ul>
       </div>
