changed some styles for mobile view, collapse menu now working for all three pages. changed column style for shop at index.html

--- a/palmtreedesigns/index.html
+++ b/palmtreedesigns/index.html
@@ -56,30 +56,30 @@
             <span class="navbar-toggler-icon"></span>
           </button>
       <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home
-                  <span class="sr-only">(current)</span>
-                </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Shop
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="Womenclothing.html">Women</a>
-              <a class="dropdown-item" href="#">Men</a>
-              <a class="dropdown-item" href="#">Children</a>
-              <a class="dropdown-item" href="#">Wall Decoration</a>
-                </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Contact</a>
-          </li>
-        </ul>
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home
+                          <span class="sr-only">(current)</span>
+                        </a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Shop
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="Womenclothing.html">Women</a>
+                      <a class="dropdown-item" href="#">Men</a>
+                      <a class="dropdown-item" href="#">Children</a>
+                      <a class="dropdown-item" href="#">Wall Decoration</a>
+                        </div>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Contact</a>
+                  </li>
+                </ul>
       </div>
       <a class="shopcart d-none d-lg-block ml-auto mr-3" href="#"><i class="fas fa-shopping-bag fa-2x"></i></a>
      </div>
@@ -134,7 +134,7 @@
         <div class="row">
 
 
-             <div class="col-4 col-sm-4 col-md-4 d-inline mb-4">
+             <div class="col-sm-12 col-md-4 col-lg-4 d-inline mb-4">
                     <a href="Womenclothing.html" class="toshopwomen"> 
                      <div class="card text-white img-hover-zoom shop-link">
                           <img class="card-img" src="imgs/women.png" alt="Women Clothing">
@@ -147,7 +147,7 @@
       
           
 
-              <div class="col-4 col-sm-4 col-md-4 d-inline mb-4">
+              <div class="col-sm-12 col-md-4 col-lg-4 d-inline mb-4">
                   <a href="menclothing.html" class="toshopmen">
                     <div class="card text-white img-hover-zoom shop-link">
                         <img class="card-img" src="imgs/men.jpg" alt="Men Clothing">
@@ -159,7 +159,7 @@
                     </div>
 
 
-               <div class="col-4 col-sm-4 col-md-4 d-inline mb-4">
+               <div class="col-sm-12 col-md-4 col-lg-4 d-inline mb-4">
                   <a href="childrenclothing.html" class="toshopchildren">
                     <div class="card text-white img-hover-zoom shop-link">
                            <img class="card-img" src="imgs/children.jpg" alt="Children Clothing"></a>
