--- a/palmtreedesigns/item.html
+++ b/palmtreedesigns/item.html
@@ -47,42 +47,42 @@
 <body>
     
        <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#"> <img src="imgs/brandlogo.png" class="brandimage"></a>
-      <a class="shopcart d-block d-lg-none ml-auto mr-3" href="#"><i class="fas fa-shopping-bag fa-2x"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home
-                  <span class="sr-only">(current)</span>
-                </a>
-          </li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Shop
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="Womenclothing.html">Women</a>
-              <a class="dropdown-item" href="#">Men</a>
-              <a class="dropdown-item" href="#">Children</a>
-              <a class="dropdown-item" href="#">Wall Decoration</a>
-                </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <a class="shopcart d-none d-lg-block ml-auto mr-3" href="#"><i class="fas fa-shopping-bag fa-2x"></i></a>
-     </div>
-  </nav>
+       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+          <div class="container">
+            <a class="navbar-brand" href="#"> <img src="imgs/brandlogo.png" class="brandimage"></a>
+            <a class="shopcart d-block d-lg-none ml-auto mr-3" href="#"><i class="fas fa-shopping-bag fa-2x"></i></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
+                      <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                          <a class="nav-link" href="index.html">Home
+                                <span class="sr-only">(current)</span>
+                              </a>
+                        </li>
+                        <li class="nav-item active dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Shop
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item active" href="Womenclothing.html">Women</a>
+                            <a class="dropdown-item" href="#">Men</a>
+                            <a class="dropdown-item" href="#">Children</a>
+                            <a class="dropdown-item" href="#">Wall Decoration</a>
+                              </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="index.html">Contact</a>
+                        </li>
+                      </ul>
+            </div>
+            <a class="shopcart d-none d-lg-block ml-auto mr-3" href="#"><i class="fas fa-shopping-bag fa-2x"></i></a>
+           </div>
+        </nav>
 
   <section class="individual-item" >
       <div class="container-fluid">
