Updated instafeed with my own code, added images, updated styles

--- a/palmtreedesigns/index.html
+++ b/palmtreedesigns/index.html
@@ -50,7 +50,7 @@
        <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"> <img src="imgs/brandlogo.png" class="brandimage"></a>
+      <a class="navbar-brand" href="#"> <img src="imgs/logonobackground.png" class="brandimage"></a>
       <a class="shopcart d-block d-lg-none ml-auto mr-3" href="#"><i class="fas fa-shopping-bag fa-2x"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -58,9 +58,7 @@
       <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home
-                          <span class="sr-only">(current)</span>
-                        </a>
+                    <a class="nav-link" href="index.html">Home </a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -88,12 +86,7 @@
   <!-- Image Slider-->
 
    <div id="carouselFull" class="carousel slide" data-ride="carousel" interval="5000">
-      <ol class="carousel-indicators">
-          <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
+          <div class="carousel-inner">
           <div class="carousel-item active">
               <img class="d-block img-fluid" src="imgs/shirt2.jpg" alt="First slide">
           </div>
@@ -195,8 +188,6 @@
                <img src="imgs/leaves.jpg" class="image2" alt="leaves">
              </div>
       </div>
-
-
     </section>
 
  <section class="section3">
@@ -259,8 +250,99 @@
       <section>
         <h1 class="section5"> &#35;palmtree_designs </h1>
           <div class="container instafeed">
-            <!-- LightWidget WIDGET -->
-            <iframe class="justify-content-center" src="http://lightwidget.com/widgets/ecfb7f42881f581eb8c17336364734f6.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:85%;border:0;overflow:hidden;"></iframe>
+
+<!-- Photo Grid -->
+              <div class="row insta-row"> 
+                     
+                <!-- Photo Column 1 -->
+                <div class="column insta-column">
+                      <a href="https://www.instagram.com/p/B4hRQidptM1/?utm_source=ig_web_copy_link" target="_blank" class="instahover">
+                          <div class="container-i">
+                            <img src="imgs/insta1.jpg" class="image-i" style="width:100%">
+                                <div class="middle">
+                                    <div class="icon"><i class="fab fa-instagram fa-4x"></i></div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.instagram.com/p/B4KjYVPpg_z/?utm_source=ig_web_copy_link" target="_blank" class="instahover">
+                          <div class="container-i">
+                            <img src="imgs/insta2.jpg" class="image-i" style="width:100%">
+                                <div class="middle">
+                                    <div class="icon"><i class="fab fa-instagram fa-4x"></i></div>
+                                </div>
+                            </div>
+                        </a>
+
+                      </div>
+
+                        <!-- Photo Column 2 -->
+
+                      <div class="column insta-column">
+                          <a href="https://www.instagram.com/p/B1JxoX_Ju9l/?utm_source=ig_web_copy_link" target="_blank" class="instahover">
+                            <div class="container-i">
+                              <img src="imgs/insta3.jpg" class="image-i" style="width:100%">
+                                  <div class="middle">
+                                      <div class="icon"><i class="fab fa-instagram fa-4x"></i></div>
+                                  </div>
+                              </div>
+                          </a>
+
+                          <a href="https://www.instagram.com/p/B1HCGrfJEGn/?utm_source=ig_web_copy_link" target="_blank" class="instahover">
+                            <div class="container-i">
+                              <img src="imgs/insta4.jpg" class="image-i" style="width:100%">
+                                  <div class="middle">
+                                      <div class="icon"><i class="fab fa-instagram fa-4x"></i></div>
+                                  </div>
+                              </div>
+                          </a>
+                      </div>  
+
+                  <!-- Photo Column 3 -->
+                      <div class="column insta-column">
+                          <a href="https://www.instagram.com/p/B03xaqtJlqc/?utm_source=ig_web_copy_link" target="_blank" class="instahover">
+                            <div class="container-i">
+                              <img src="imgs/insta5.jpg" class="image-i" style="width:100%">
+                                  <div class="middle">
+                                      <div class="icon"><i class="fab fa-instagram fa-4x"></i></div>
+                                  </div>
+                              </div>
+                          </a>
+
+                          <a href="https://www.instagram.com/p/BvYwLawH78l/?utm_source=ig_web_copy_link" target="_blank" class="instahover">
+                            <div class="container-i">
+                              <img src="imgs/insta6.jpg" class="image-i" style="width:100%">
+                                  <div class="middle">
+                                      <div class="icon"><i class="fab fa-instagram fa-4x"></i></div>
+                                  </div>
+                              </div>
+                          </a>
+
+                      </div>
+
+                                <!-- Photo Column 4 -->
+
+                      <div class="column insta-column">
+                          <a href="https://www.instagram.com/p/Btd1rM6HHvB/?utm_source=ig_web_copy_link" target="_blank" class="instahover">
+                            <div class="container-i">
+                              <img src="imgs/insta7.jpg" class="image-i" style="width:100%">
+                                  <div class="middle">
+                                      <div class="icon"><i class="fab fa-instagram fa-4x"></i></div>
+                                  </div>
+                              </div>
+                          </a>
+
+                          <a href="https://www.instagram.com/p/Bt1HnS-n3y1/?utm_source=ig_web_copy_link"  target="_blank" class="instahover">
+                            <div class="container-i">
+                              <img src="imgs/insta8.jpg" class="image-i" style="width:100%">
+                                  <div class="middle">
+                                      <div class="icon"><i class="fab fa-instagram fa-4x"></i></div>
+                                  </div>
+                              </div>
+                          </a>
+                       </div>
+
+              </div>
 
             </div>
               </section>
@@ -302,10 +384,10 @@
                               <footer><h4 class="smallfooter">Thanks for visiting PalmTreeDesigns </h4>
                               </footer>
                                 <div class="socialbuttons">
-                                    <a href="https://www.facebook.com/PalmtreeDesigns-Embroidery-530402374060800" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                                    <a href="https://www.instagram.com/palmtree_designs/?hl=nl" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                                    <a href="https://www.linkedin.com/in/lenkenslisa/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                                    <a href="https://github.com/lisalenkens" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+                                    <a href="https://www.facebook.com/PalmtreeDesigns-Embroidery-530402374060800" target="_blank"><i class="fab fa-facebook fa-2x footersocial"></i></a>
+                                    <a href="https://www.instagram.com/palmtree_designs/?hl=nl" target="_blank"><i class="fab fa-instagram fa-2x footersocial"></i></a>
+                                    <a href="https://www.linkedin.com/in/lenkenslisa/" target="_blank"><i class="fab fa-linkedin fa-2x footersocial"></i></a>
+                                    <a href="https://github.com/lisalenkens" target="_blank"><i class="fab fa-github fa-2x footersocial"></i></a>
                                   </div>
               
                                     <p class="copyright"> &copy; 2019. PalmTreeDesigns </p>
@@ -337,7 +419,7 @@
            mobile: false,
            duration: 2000,
            origin:'left',
-           distance: '200px',
+           distance: '50px',
            easing: 'ease',
          });
          sr.reveal('.text-box', {
@@ -351,7 +433,7 @@
            delay: 1300,
            duration: 2000,
            origin:'right',
-           distance: '200px', 
+           distance: '50px', 
            easing:'ease',
          });       
    
