--- a/palmtreedesigns/Womenclothing.html
+++ b/palmtreedesigns/Womenclothing.html
@@ -49,7 +49,7 @@
        <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"> <img src="imgs/brandlogo.png" class="brandimage"></a>
+      <a class="navbar-brand" href="index.html"> <img src="imgs/logonobackground.png" class="brandimage"></a>
       <a class="shopcart d-block d-lg-none ml-auto mr-3" href="#"><i class="fas fa-shopping-bag fa-2x"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -227,16 +227,18 @@
             </div>
         </div>
 
+<a id="back-to-top" href="#" class="btn back-to-top" role="button" title="Back to top" data-toggle="tooltip" data-placement="left"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
+
 
         <div class="footer2">
                 <footer><h4 class="smallfooter">Thanks for visiting PalmTreeDesigns </h4>
                 </footer>
-                  <div class="socialbuttons">
-                      <a href="https://www.facebook.com/PalmtreeDesigns-Embroidery-530402374060800" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                      <a href="https://www.instagram.com/palmtree_designs/?hl=nl" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                      <a href="https://www.linkedin.com/in/lenkenslisa/"  target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                      <a href="https://github.com/lisalenkens" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-                    </div>
+                <div class="socialbuttons">
+                    <a href="https://www.facebook.com/PalmtreeDesigns-Embroidery-530402374060800" target="_blank"><i class="fab fa-facebook fa-2x footersocial"></i></a>
+                    <a href="https://www.instagram.com/palmtree_designs/?hl=nl" target="_blank"><i class="fab fa-instagram fa-2x footersocial"></i></a>
+                    <a href="https://www.linkedin.com/in/lenkenslisa/" target="_blank"><i class="fab fa-linkedin fa-2x footersocial"></i></a>
+                    <a href="https://github.com/lisalenkens" target="_blank"><i class="fab fa-github fa-2x footersocial"></i></a>
+                  </div>
 
                       <p class="copyright"> &copy; 2019. PalmTreeDesigns </p>
                   
