added scripts, deleted old bootstrap file, added initial scroll reveal

--- a/palmtreedesigns/Womenclothing.html
+++ b/palmtreedesigns/Womenclothing.html
@@ -69,7 +69,7 @@
               Shop
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="Womenclothing.html">Women</a>
+              <a class="dropdown-item active" href="Womenclothing.html">Women</a>
               <a class="dropdown-item" href="#">Men</a>
               <a class="dropdown-item" href="#">Children</a>
               <a class="dropdown-item" href="#">Wall Decoration</a>
