--- a/palmtreedesigns/item.html
+++ b/palmtreedesigns/item.html
@@ -24,27 +24,24 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/4029df1ee2.js"></script>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-    rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Slab&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css?family=Abril+Fatface|Fjalla+One|Josefin+Sans|Josefin+Slab|Manjari|Nanum+Myeongjo|Nunito|Playfair+Display|Poppins|Quicksand|Roboto|Roboto+Condensed|Roboto+Mono|Roboto+Slab|Satisfy|Source+Serif+Pro|Ubuntu+Condensed|Vollkorn+SC&display=swap"
-    rel="stylesheet">
+   <!-- Google Fonts -->
+ <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+ <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
+   rel='stylesheet' type='text/css'>
+ <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Slab&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+ <link
+   href="https://fonts.googleapis.com/css?family=Abril+Fatface|Fjalla+One|Josefin+Sans|Josefin+Slab|Manjari|Nanum+Myeongjo|Nunito|Playfair+Display|Poppins|Quicksand|Roboto|Roboto+Condensed|Roboto+Mono|Roboto+Slab|Satisfy|Source+Serif+Pro|Ubuntu+Condensed|Vollkorn+SC&display=swap"
+   rel="stylesheet">
 
-  <!-- Plugins -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-  crossorigin="anonymous"></script>
+ <!-- Plugins -->
+ <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 
 
-  <!-- Theme CSS - Includes Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="css/mystyles.css" rel="stylesheet">
+ <!-- Theme CSS - Includes Bootstrap -->
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+ <link href="css/mystyles.css" rel="stylesheet">
+ <link href="css/stylewomen.css" rel="stylesheet">
 
 </head>
 
@@ -262,14 +259,16 @@
       </div>
     </section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"></script>
-   
+ <!-- Bootstrap core JavaScript -->
+ <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+ integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+ crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+ integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+ crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+ crossorigin="anonymous"></script>
 
 
  <!-- Script for Scrollreveal -->
